@@ -40,6 +40,9 @@ Stalker Pyramid Changes
   * **Update:** Week zoom now shows the day number instead of the first letter
     of the day.
   * **Update:** Removed dateField.js.
+  * **New:** For Tasks which are not shown because their start and end dates
+    are not in range, a left or right red arrow will be drawn to show where the
+    task is (on left or on right).
 
 pre 0.1.0.b1
 ============
